tests/negative/other/function_missing_return.tx
// EXPECTED: COMPILE_ERROR
// Description: Non-void functions must return a value on every control-flow path.

function maybeNumber(flag: bool): int {
    if (flag) {
        return 1;
    }
}

function main() {}
